Issue #6654 - Fix NPEs from bad Servlet API use
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>